<resources>
    <string name="app_name">MovieDB</string>

    <string name="base_url">http://api.themoviedb.org/3/</string>
    <string name="api_key">0a08e38b874d0aa2d426ffc04357069d</string>
    <string name="more_info">More Info</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="offline_text">No Internet connection</string>
    <string name="title_adult_film">Adult film</string>
    <string name="title_adult_person">Is he/she adult</string>
    <string name="title_overview">Overview</string>
    <string name="title_release_date">Release date</string>
    <string name="title_title">Title</string>
    <string name="title_original_title">Original Title</string>
    <string name="title_popularity">Popularity</string>
    <string name="title_vote_avg">Vote Average</string>
    <string name="title_name">Name</string>
    <string name="title_first_air_date">First Air Date</string>
    <string name="error_message" />

</resources>
