<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true">
  
  <android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay">
    
    <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      app:popupTheme="@style/AppTheme.PopupOverlay"/>
  </android.support.design.widget.AppBarLayout>
  
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      
      <ImageView
        android:id="@+id/movie_detail_header"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"/>
      
      <TextView
        android:id="@+id/title_title"
        style="@style/movie_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@id/movie_detail_header"
        android:text="@string/title_title"/>
      
      <TextView
        android:id="@+id/value_title"
        style="@style/movie_details_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_title"/>
      
      <TextView
        android:id="@+id/title_orig_title"
        style="@style/movie_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/value_title"
        android:text="@string/title_original_title"/>
      
      <TextView
        android:id="@+id/value_orig_title"
        style="@style/movie_details_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_orig_title"/>
      
      <TextView
        android:id="@+id/title_overview"
        style="@style/movie_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/value_orig_title"
        android:text="@string/title_overview"/>
      
      <TextView
        android:id="@+id/value_overview"
        style="@style/movie_details_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_overview"/>
      
      <TextView
        android:id="@+id/title_date"
        style="@style/movie_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/value_overview"
        android:text="@string/title_release_date"/>
      
      <TextView
        android:id="@+id/value_date"
        style="@style/movie_details_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_date"/>
      
      <TextView
        android:id="@+id/title_popularity"
        style="@style/movie_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/value_date"
        android:text="@string/title_popularity"/>
      
      <TextView
        android:id="@+id/value_popularity"
        style="@style/movie_details_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_popularity"/>
      
      <TextView
        android:id="@+id/title_vote_avg"
        style="@style/movie_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/value_popularity"
        android:text="@string/title_vote_avg"/>
      
      <TextView
        android:id="@+id/value_vote_avg"
        style="@style/movie_details_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_vote_avg"/>
      
      <TextView
        android:id="@+id/title_adult"
        style="@style/movie_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/value_vote_avg"
        android:text="@string/title_adult_film"/>
      
      <TextView
        android:id="@+id/value_adult"
        style="@style/movie_details_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_adult"
        android:text=""/>
    </RelativeLayout>
  </ScrollView>
</android.support.design.widget.CoordinatorLayout>
