<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="show"
            type="com.tp.projects.moviedb.tvshows.TVShowData" />
    </data>

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".tvshows.TVShowDetailsActivity"
        tools:showIn="@layout/activity_movie_details">


        <ImageView
            android:id="@+id/show_detail_header"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_detail_header">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/title_title"
                    style="@style/movie_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/title_title" />

                <TextView
                    android:id="@+id/value_title"
                    style="@style/movie_details_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_title"
                    android:text="@{show.name}" />

                <TextView
                    android:id="@+id/title_orig_title"
                    style="@style/movie_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/value_title"
                    android:text="@string/title_original_title" />

                <TextView
                    android:id="@+id/value_orig_title"
                    style="@style/movie_details_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_orig_title"
                    android:text="@{show.originalName}" />

                <TextView
                    android:id="@+id/title_overview"
                    style="@style/movie_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/value_orig_title"
                    android:text="@string/title_overview" />

                <TextView
                    android:id="@+id/value_overview"
                    style="@style/movie_details_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_overview"
                    android:text="@{show.overview}" />

                <TextView
                    android:id="@+id/title_date"
                    style="@style/movie_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/value_overview"
                    android:text="@string/title_first_air_date" />

                <TextView
                    android:id="@+id/value_date"
                    style="@style/movie_details_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_date"
                    android:text="@{show.firstAirDate}" />

                <TextView
                    android:id="@+id/title_popularity"
                    style="@style/movie_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/value_date"
                    android:text="@string/title_popularity" />

                <TextView
                    android:id="@+id/value_popularity"
                    style="@style/movie_details_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_popularity"
                    android:text="@{show.popularity.toString()}" />

                <TextView
                    android:id="@+id/title_vote_avg"
                    style="@style/movie_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/value_popularity"
                    android:text="@string/title_vote_avg" />

                <TextView
                    android:id="@+id/value_vote_avg"
                    style="@style/movie_details_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_vote_avg"
                    android:text="@{show.voteAverage.toString()}" />
                />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>